<resources>
    <string name="app_name">BIBLIOTECA| UNPRG</string>
    <string name="item_titulo">Título</string>
    <string name="item_libroP">LIBROS PRESTADOS</string>
    <string name="item_entregado">LISTA DE ENTREGADOS</string>
    <string name="item_nombreP">Nombre</string>
    <string name="item_fechaP">Fecha Prestamo</string>
    <string name="item_telefonoP">Telefono</string>
    <string name="btn_Guardar">Guardar</string>
    /*---------------DETALLE PRESTAMO--------------*/
    <string name="item_detalleP">DETALLE PRÉSTAMO</string>
    <string name="item_libroTP">LIBROS PRESTADOS</string>
    <string name="item_button">Devolver todos</string>
    <string name="item_DNI">DNI:</string>
    <string name="item_nombre">Nombre:</string>
    <string name="item_procedencia">Procedencia:</string>
    <string name="item_correo">Correo:</string>
    <string name="item_telefono">Telefono:</string>
    <string name="item_fecha">Fecha:</string>
    /*--------------------------------------------*/
    <array name="opciones">
        <item>LIBROS POR TÍTULO</item>
        <item>LIBROS POR AUTOR</item>
    </array>

    <string name="DNI">Ingrese DNI</string>
    <string name="nombrePersona">Ingrese nombre</string>
    <string name="procedencia">Ingrese procedencia</string>
    <string name="correo">Ingrese correo electrónico</string>
    <string name="numeroCelular">Ingrese número telefónico</string>
    <string name="fechaPrestamo">dd/mm/aaaa</string>
    <string name="prestamo_interno">Interno</string>
    <string name="prestamo_externo">Externo</string>


    <string name="title_activity_detalle_libro">BIBLIOTECA| UNPRG</string>
    <string name="title_activity_prestamos">BIBLIOTECA| UNPRG</string>
    <string name="title_activity_libros_prestados">BIBLIOTECA| UNPRG</string>
    <string name="title_activity_entregas">BIBLIOTECA|UNPRG</string>
    <string name="title_activity_detalle_prestamo">BIBLIOTECA| UNPRG</string>
    <string name="title_activity_libros">BIBLIOTECA|UNPRG</string>
    <string name="title_activity_carrito_prestamo">BIBLIOTECA| UNPRG</string>

    <string name="carrito_titulo">EJEMPLARES ESCOGIDOS</string>
    <string name="detalle_libro_titulo">DATOS DEL LIBRO</string>

    <string name="boton_pedido">Hacer pedido</string>
    <string name="menu_libros">Libros</string>
    <string name="menu_prestamo">Prestamo</string>
    <string name="menu_entregas">Prestamo Externo</string>
    <string name="menu_libros_prestados">Prestamo Interno</string>

</resources>
