<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detalle_prestamo"
    tools:showIn="@layout/activity_detalle_prestamo">

    <TextView
        android:id="@+id/detalle_prestamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:text="@string/item_detalleP"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detalle_dni"
        android:layout_width="336dp"
        android:layout_height="23dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/documento"
        android:text="@string/item_DNI"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/detalle_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detalle_prestamo"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/detalle_nombre"
        android:layout_width="332dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/nombrecliente"
        android:text="@string/item_nombre"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/detalle_procedencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detalle_procedencia"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/procedencia"
        android:text="@string/item_procedencia"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/procedencia_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detalle_correo"
        android:layout_width="338dp"
        android:layout_height="25dp"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/correoelectronico"
        android:text="@string/item_correo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/detalle_libroPrestados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/procedencia_telefono"
        android:layout_width="335dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:drawableLeft="@drawable/telefono"
        android:text="@string/item_telefono"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/detalle_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detalle_libroPrestados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/item_libroTP"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ListView
        android:layout_width="348dp"
        android:layout_height="276dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>