<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLibrosPrestados"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/ic_prestados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageLibros"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/ic_search_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/menu_libros"

        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLibros" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="116dp"
        android:layout_height="73dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/menu_entregas"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEntregas" />

    <ImageView
        android:id="@+id/imagePrestamo"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/ic_book_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:text="@string/menu_prestamo"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePrestamo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="120dp"
        android:layout_height="73dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/menu_libros_prestados"

        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLibrosPrestados" />

    <ImageView
        android:id="@+id/imageEntregas"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/ic_4544845_business_comerce_delivery_list_shop_121445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>